--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,27 +1,15 @@
 ---
-- name: Install virtualenv (needed for Enhydris)
-  apt: name=virtualenv
-
-- name: Install gdal (needed for Enhydris)
-  apt: name=python3-gdal
-
-- name: Install psycopg2 (needed for Enhydris)
-  apt: name=python3-psycopg2
-
-- name: Install git (needed for Enhydris)
-  apt: name=git
-
-- name: Install build-essential (needed because sometimes some Enhydris dependencies need to be compiled)
-  apt: name=build-essential
-
-- name: Install python3-dev (needed because django-rest-captcha has dependency on Pillow<5 which may need to be compiled)
-  apt: name=python3-dev
-
-- name: Install libjpeg-dev (needed because django-rest-captcha has dependency on Pillow<5 which may need to be compiled)
-  apt: name=libjpeg-dev
-
-- name: Install libfreetype6-dev (needed because django-rest-captcha has dependency on Pillow<5 which may need to be compiled)
-  apt: name=libfreetype6-dev
+- name: Install apt packages needed for Enhydris
+  apt:
+    name:
+     - virtualenv
+     - python3-gdal
+     - python3-psycopg2
+     - git
+     - build-essential  # Some dependencies may need compilation
+     - python3-dev  # Some dependencies may need compilation
+     - libjpeg-dev  # Pillow (indirect dependency) may need compilation
+     - libfreetype6-dev  # Also for Pillow
 
 - name: "Install Enhydris for {{ enhydris_instance_name }}"
   git:
