Fix inaccessible awstats

--- a/templates/apache-enhydris.conf
+++ b/templates/apache-enhydris.conf
@@ -10,7 +10,7 @@ Alias /{{ site_base_url | default("") }}static /var/cache/enhydris/{{ enhydris_i
     Require all granted
 </Directory>
 
-{% set static_dirs = "media/|static/" %}
+{% set static_dirs = "media/|static/|awstats/|awstats-icon/" %}
 {% if use_enhydris_synoptic|default(False) -%}
 {% set static_dirs = static_dirs ~ "|synoptic/" -%}
 Alias /{{ site_base_url | default("") }}synoptic /var/cache/enhydris/{{ enhydris_instance_name }}/synoptic
