Make compatible with Celery 5

--- a/templates/enhydris-synoptic-celerybeat.service
+++ b/templates/enhydris-synoptic-celerybeat.service
@@ -7,8 +7,8 @@ Group={{ dbname|default(enhydris_instance_name) }}
 WorkingDirectory=/opt/enhydris-{{ enhydris_instance_name }}
 Environment="PYTHONPATH=/etc/opt/enhydris/{{ enhydris_instance_name }}"
 Environment="DJANGO_SETTINGS_MODULE=settings"
-ExecStart=/opt/enhydris-{{ enhydris_instance_name }}/venv/bin/celery beat \
-    --app=enhydris.celery:app --loglevel=info \
+ExecStart=/opt/enhydris-{{ enhydris_instance_name }}/venv/bin/celery \
+    --app=enhydris.celery:app beat --loglevel=info \
     --schedule=/var/opt/enhydris/{{ enhydris_instance_name }}/celerybeat.db \
     --pidfile=/var/opt/enhydris/{{ enhydris_instance_name }}/celerybeat.pid \
     --logfile=/var/log/enhydris/{{ enhydris_instance_name }}/synoptic-celerybeat.log
