--- a/templates/enhydris-celery.service
+++ b/templates/enhydris-celery.service
@@ -7,8 +7,8 @@ Group={{ dbname|default(enhydris_instance_name) }}
 WorkingDirectory=/opt/enhydris-{{ enhydris_instance_name }}
 Environment="PYTHONPATH=/etc/opt/enhydris/{{ enhydris_instance_name }}"
 Environment="DJANGO_SETTINGS_MODULE=settings"
-ExecStart=/opt/enhydris-{{ enhydris_instance_name }}/venv/bin/celery worker \
-    --app=enhydris.celery:app --hostname="{{ enhydris_instance_name }}@%%h" \
+ExecStart=/opt/enhydris-{{ enhydris_instance_name }}/venv/bin/celery \
+    --app=enhydris.celery:app worker --hostname="{{ enhydris_instance_name }}@%%h" \
     --queues={{ enhydris_instance_name }} --loglevel=info --concurrency=1 \
     --logfile=/var/log/enhydris/{{ enhydris_instance_name }}/celery.log
 
