Add parameter enhydris_require_authentication

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,4 +3,10 @@ enhydris_aggregator: false
 use_enhydris_synoptic: false
 use_enhydris_autoprocess: false
 use_enhydris_openhigis: false
+
+enhydris_require_authentication: false
+enhydris_users_can_add_content: false
+enhydris_default_publicly_available: false
+enhydris_enable_timeseries_data_viewers: false
+
 enhydris_synoptic_station_link_target: "station/{station.id}/"
