Add prometheus exporters
This also fixes an error where Celery was only activated if autoprocess
or synoptic was installed, but new core Enhydris functionality, namely
the telemetry, requires Celery as well.

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -29,3 +29,8 @@
   shell: >
     systemctl daemon-reload &&
     service enhydris-{{ enhydris_instance_name }}-* restart
+
+- name: "Restart rabbitmq-server"
+  service:
+    name: rabbitmq-server
+    state: restarted
