--- a/templates/enhydris-celerybeat.service
+++ b/templates/enhydris-celerybeat.service
@@ -1,5 +1,5 @@
 [Unit]
-Description="Enhydris {{ enhydris_instance_name }} synoptic celerybeat"
+Description="Enhydris {{ enhydris_instance_name }} celerybeat"
 
 [Service]
 User={{ dbname|default(enhydris_instance_name) }}
@@ -11,7 +11,7 @@ ExecStart=/opt/enhydris-{{ enhydris_instance_name }}/venv/bin/celery \
     --app=enhydris.celery:app beat --loglevel=info \
     --schedule=/var/opt/enhydris/{{ enhydris_instance_name }}/celerybeat.db \
     --pidfile=/var/opt/enhydris/{{ enhydris_instance_name }}/celerybeat.pid \
-    --logfile=/var/log/enhydris/{{ enhydris_instance_name }}/synoptic-celerybeat.log
+    --logfile=/var/log/enhydris/{{ enhydris_instance_name }}/celerybeat.log
 
 [Install]
 WantedBy=multi-user.target
