Fix error in mapserver.conf

--- a/files/mapserver.conf
+++ b/files/mapserver.conf
@@ -1,5 +1,5 @@
 CONFIG
     ENV
-        MS_MAP_PATTERN "^/opt/enhydris-[^/]+/enhydris-openhigis/mapserver/openhigis.map"
+        MS_MAP_PATTERN "^/opt/enhydris-[^/]+/enhydris-openhigis/mapserver/(el/)?openhigis.map"
     END
 END
